<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>es.uniovi.reflection</groupId>
	<artifactId>ProgQuery</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<packaging>jar</packaging>
	  	<properties>
		<maven.compiler.source>1.13</maven.compiler.source>
		<maven.compiler.target>1.13</maven.compiler.target>
	</properties>
	 
	<dependencies>
	<dependency> 
    <groupId>com.sun</groupId>
    <artifactId>tools</artifactId>
    <version>1.8</version>
    <scope>system</scope>
    <systemPath>C:\Users\Oskar\Desktop\Estudios\Thesis\ProgQuery-bis\ProgQuery\ProgQuery\lib\tools.jar</systemPath>
    <optional>true</optional>
</dependency> 
		<dependency>  
			<groupId>org.neo4j</groupId>
			<artifactId>neo4j</artifactId>
			<version>4.2.3</version>
		</dependency> 
		<dependency> 
			<groupId>org.neo4j.driver</groupId>
			<artifactId>neo4j-java-driver</artifactId>
			<version>4.2.1</version>
		</dependency>
		
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.8.1</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
  <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>3.8.1</version>
        <configuration>
          <compilerArgs>
            <arg>--add-exports jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
          </compilerArgs>
        </configuration>
      </plugin>

			<plugin> 
	    <artifactId>maven-resources-plugin</artifactId>
	    <configuration>
	        <outputDirectory> ${project.build.outputDirectory}\resources</outputDirectory>
	    </configuration>
    </plugin>
    <plugin>
      <artifactId>maven-assembly-plugin</artifactId>
      <configuration>
        <archive>
          <manifest>
            <mainClass>ProgQueryPlugin</mainClass>
          </manifest>
        </archive>
        <descriptorRefs>
          <descriptorRef>jar-with-dependencies</descriptorRef>
        </descriptorRefs>
        <appendAssemblyId>false</appendAssemblyId>
      </configuration>
    </plugin> 

		</plugins>
	</build>
</project>